--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,11 +8,11 @@
 
 
 <h1>@ViewData["Title"]</h1>
-
+<partial name="_StatusMessage" for="StatusMessage" />
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form  method="post">
             <h4></h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.RoleId"></label>
-                <select asp-for="Input.RoleId" asp-items="Model.Options" class="form-controle"></select>
+                <select asp-for="Input.RoleId" asp-items="Model.rolesoptions" class="form-controle"></select>
                 <span asp-validation-for="Input.RoleId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -59,27 +59,8 @@
             <h4>Use another service to register.</h4>
             <hr />
             @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
+               
+                    
                 }
             }
         </section>-->
