--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -44,7 +44,7 @@
 <div class="col-md-12">  
 
    
-    <p><a class="entrerlink"  asp-page="/Entrer">Cliquez ici pour valider votre présence</a></p>
+    <h4><a class="entrerlink"  asp-page="/Entrer">Cliquez ici pour valider votre présence</a></h4>
     
 </div>
 
@@ -77,6 +77,19 @@
             Nom d'utilisateur (Email) :  admin@admin.com<br>
             Mot de Passe : Admin$123
              </p>  
+               <p>
+            <span class="compteinfos">Compte Professeur</span> <br>
+            Nom d'utilisateur (Email) :  y@y.y<br>
+            Mot de Passe : Yy$123
+             </p>  
+             
+             <p><b>Pour les autres comptes, les Mot de passe commence par la première lettre de l'email</b>
+             <br>
+             Exemple:  
+             Email : c@c.c <br>
+             Mot de passe : Cc$123
+             </p>
+               
              <p>
                 
 
