--- a/Pages/Entrer.cshtml
+++ b/Pages/Entrer.cshtml
@@ -11,12 +11,12 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.coderfid" class="control-label"></label>
+                <label>Code RFID</label>
                 <input asp-for="Input.coderfid" class="form-control" />
                 <span asp-validation-for="Input.coderfid" class="text-danger"></span>
             </div>
        <div class="form-group">
-                <label asp-for="Input.codepointeur" class="control-label"></label>
+                <label>Code du pointeur de la salle</label>
                 <input asp-for="Input.codepointeur" class="form-control" />
                 <span asp-validation-for="Input.codepointeur" class="text-danger"></span>
             </div>
